@@ -1,3 +1,11 @@
+2008-04-17  Emmanuele Bassi  <ebassi@gnome.org>
+
+	* glib/gchecksum.c:
+	(sha_byte_reverse): Use the macro GLib provides for byte-swapping
+	as it can be optimized.
+	
+	(g_checksum_update): Fix a compiler warning.
+
 2008-04-15  Mukund Sivaraman  <muks@mukund.org>
 
 	* gio/gfile.c: Fixed typos in gtk-doc comments.
